--- a/apollo_server/package.json
+++ b/apollo_server/package.json
@@ -10,11 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^2.11.0",
+    "apollo-server-express": "^2.17.0",
     "express": "^4.17.1",
     "graphql": "^14.6.0",
     "graphql-iso-date": "^3.6.1",
     "graphql-type-json": "^0.3.1",
-    "mongoose": "^5.9.6"
+    "mongoose": "^5.9.6",
+    "node-fetch": ">=2.6.1"
   }
 }
