--- a/express_server/package.json
+++ b/express_server/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.6"
+    "mongoose": "^5.9.6",
+    "node-fetch": ">=2.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
